[metadata]
name = chewie
version = 0.0.18
summary = A bare-bones EAPOL/802.1x implementation
license = Apache-2
author = Sam Russell
author-email = sam.h.russell@gmail.com
home-page = https://github.com/faucetsdn/chewie
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
keywords =
    802.1x
    dot1x
    eap
    eapol
    radius
    authentication
    aaa

[files]
packages =
    chewie

license_file = LICENSE

[bdist_wheel]
universal=0

[pytype]
python_version = 3.6
pythonpath =
    .:
    chewie:
    test:
disable =
    pyi-error,
    import-error
